# functa_torch

./: .gitignore  config.yaml  config_testing.yaml  examine_results.ipynb  make_triangles.py  pyproject.toml  run_experiment.py  run_experiment_with_args.py  setup.py
experiments/10_triangles_latent_16/: config.yaml  examine_results.ipynb  functa_triangles.batch
functa_torch/: make_imgs.py  run_experiment.py  run_experiment_with_args.py
functa_torch.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
functa_torch/utils/: analysis.py  config.py  data_handling.py  examination_helpers.py  helpers.py  nonpublic.py  siren.py  training.py
src/: .gitignore
src/functa_torch/: make_imgs.py  run_experiment.py  run_experiment_with_args.py
src/functa_torch/utils/: analysis.py  config.py  data_handling.py  directory_navigation.py  helpers.py  nonpublic.py  siren.py  training.py
utils/: config.py  data_handling.py  helpers.py  siren.py  training.py
